--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -283,4 +283,9 @@ config ASYNC_FSYNC
 	bool "asynchronous fsync"
 	default y
 
+config DYNAMIC_FSYNC
+	bool "dynamic file sync control"
+	default n
+	help
+	  
 endmenu
