--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -19,7 +19,7 @@ endif
 
 obj-y += loadavg.o clock.o cputime.o
 obj-y += idle_task.o deadline.o stop_task.o
-obj-y += wait.o completion.o idle.o sched_avg.o
+obj-y += wait.o swait.o completion.o idle.o sched_avg.o
 obj-$(CONFIG_SMP) += cpupri.o cpudeadline.o
 obj-$(CONFIG_SCHED_AUTOGROUP) += auto_group.o
 obj-$(CONFIG_SCHEDSTATS) += stats.o
