--- a/drivers/video/msm/mdss/Makefile
+++ b/drivers/video/msm/mdss/Makefile
@@ -54,13 +54,13 @@ obj-$(CONFIG_FB_MSM_MDSS_HDMI_PANEL) += mdss_hdmi_cec.o
 obj-$(CONFIG_FB_MSM_MDSS_HDMI_PANEL) += mdss_hdmi_audio.o
 obj-$(CONFIG_FB_MSM_MDSS_HDMI_MHL_SII8334) += mhl_sii8334.o mhl_msc.o
 
-obj-$(CONFIG_FB_MSM_MDSS_WRITEBACK) += mdss_wb.o
+obj-$(CONFIG_FB_MSM_MDSS_WRITEBACK) 	+= mdss_wb.o
 
 mdss-qpic-objs := mdss_qpic.o mdss_fb.o mdss_qpic_panel.o
-obj-$(CONFIG_FB_MSM_QPIC) += mdss-qpic.o
+obj-$(CONFIG_FB_MSM_QPIC) 		+= mdss-qpic.o
 obj-$(CONFIG_FB_MSM_QPIC_ILI_QVGA_PANEL) += qpic_panel_ili_qvga.o
 
-obj-$(CONFIG_FB_MSM_MDSS) += mdss_fb.o mdss_util.o
-obj-$(CONFIG_COMPAT) += mdss_compat_utils.o
-
-obj-$(CONFIG_FB_MSM_MDSS) += mdss_livedisplay.o
+obj-$(CONFIG_FB_MSM_MDSS) 		+= mdss_fb.o mdss_util.o
+obj-$(CONFIG_COMPAT) 			+= mdss_compat_utils.o
+obj-$(CONFIG_FB_MSM_MDSS) 		+= mdss_livedisplay.o
+obj-$(CONFIG_FB_MSM_MDSS_KCAL_CTRL) 	+= mdss_mdp_kcal_ctrl.o
