--- a/security/selinux/Kconfig
+++ b/security/selinux/Kconfig
@@ -65,6 +65,14 @@ config SECURITY_SELINUX_DEVELOP
 	  can interactively toggle the kernel between enforcing mode and
 	  permissive mode (if permitted by the policy) via /selinux/enforce.
 
+config SECURITY_SELINUX_FAKE_ENFORCE
+	bool "NSA SELinux Fake Enforcing"
+	depends on SECURITY_SELINUX_DEVELOP && !SECURITY_SELINUX_ALWAYS_ENFORCE
+	default n
+	help
+	  This option will cause the kernel to always report the SELinux status
+	  as Enforcing to the userspace.
+
 config SECURITY_SELINUX_AVC_STATS
 	bool "NSA SELinux AVC Statistics"
 	depends on SECURITY_SELINUX
