--- a/arch/arm/boot/dts/qcom/msm8996pro.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996pro.dtsi
@@ -165,24 +165,24 @@
 
 	qcom,cpr-open-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-45000)       0        0  (-25000)       0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
+		<(-45000)       0        0  (-15000)   10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
 
 		/* Speed bin 1 */
-		<(-45000)       0        0  (-25000)       0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
+		<(-45000)       0        0  (-15000)   10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
 
 		/* Speed bin 2 */
 		<(-45000)       0        0  (-25000)       0 >,
@@ -196,24 +196,24 @@
 
 	qcom,cpr-closed-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-55000) (-25000)  (-5000) (-20000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
+		<(-55000) (-25000)  (-5000) (-10000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
 
 		/* Speed bin 1 */
-		<(-55000) (-25000)  (-5000) (-20000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
-		<      0  (-15000) (-15000) (-15000) (-15000)>,
+		<(-55000) (-25000)  (-5000) (-10000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
+		<      0  (-15000) (-15000)  (-5000)  (-5000)>,
 
 		/* Speed bin 2 */
 		<(-55000) (-25000)  (-5000) (-20000) (-15000)>,
@@ -383,24 +383,24 @@
 
 	qcom,cpr-open-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-40000)       0        0  (-10000) (-50000)>,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
+		<(-40000)       0        0      0    (-40000)>,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
 
 		/* Speed bin 1 */
-		<(-40000)       0        0  (-10000) (-50000)>,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
-		<      0        0        0    15000        0 >,
+		<(-40000)       0        0      0    (-40000)>,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
+		<      0        0        0    25000    10000 >,
 
 		/* Speed bin 2 */
 		<(-40000)       0        0  (-10000) (-50000)>,
@@ -414,24 +414,24 @@
 
 	qcom,cpr-closed-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-45000) (-25000)   10000  (-10000) (-40000)>,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
+		<(-45000) (-25000)   10000      0    (-30000)>,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
 
 		/* Speed bin 1 */
-		<(-45000) (-25000)   10000  (-10000) (-40000)>,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
-		<(-15000) (-10000)    5000    20000        0 >,
+		<(-45000) (-25000)   10000      0    (-30000)>,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
+		<(-15000) (-10000)    5000    30000    10000 >,
 
 		/* Speed bin 2 */
 		<(-45000) (-25000)   10000  (-10000) (-40000)>,
@@ -457,13 +457,13 @@
 	qcom,cpr-fuse-corners = <5>;
 	qcom,cpr-fuse-combos = <24>;
 	qcom,cpr-speed-bins = <3>;
-	qcom,cpr-speed-bin-corners = <27 25 25>;
+	qcom,cpr-speed-bin-corners = <27 27 25>;
 	qcom,cpr-corners =
 		/* Speed bin 0 */
 		<27 27 27 27 27 27 27 27>,
 
 		/* Speed bin 1 */
-		<25 25 25 25 25 25 25 25>,
+		<27 27 27 27 27 27 27 27>,
 
 		/* Speed bin 2 */
 		<25 25 25 25 25 25 25 25>;
@@ -480,14 +480,14 @@
 		<4 7 10 15 27>,
 
 		/* Speed bin 1 */
-		<1 7 10 15 25>,
-		<1 7 10 15 25>,
-		<4 7 10 15 25>,
-		<4 7 10 15 25>,
-		<4 7 10 15 25>,
-		<4 7 10 15 25>,
-		<4 7 10 15 25>,
-		<4 7 10 15 25>,
+		<1 7 10 15 27>,
+		<1 7 10 15 27>,
+		<4 7 10 15 27>,
+		<4 7 10 15 27>,
+		<4 7 10 15 27>,
+		<4 7 10 15 27>,
+		<4 7 10 15 27>,
+		<4 7 10 15 27>,
 
 		/* Speed bin 2 */
 		<1 7 10 15 25>,
@@ -510,7 +510,7 @@
 		<670000  670000  670000  670000  670000  670000  670000  745000
 		 745000  745000  905000  905000  905000  905000  905000 1140000
 		1140000 1140000 1140000 1140000 1140000 1140000 1140000 1140000
-		1140000>,
+		1140000 1140000 1140000>,
 
 		/* Speed bin 2 */
 		<670000  670000  670000  670000  670000  670000  670000  745000
@@ -529,7 +529,7 @@
 		<470000  470000  470000  470000  470000  470000  470000  470000
 		 470000  470000  470000  470000  470000  470000  470000  470000
 		 470000  470000  470000  470000  470000  470000  470000  470000
-		 470000>,
+		 470000  470000  470000>,
 
 		/* Speed bin 2 */
 		<470000  470000  470000  470000  470000  470000  470000  470000
@@ -548,7 +548,7 @@
 		 <80000   80000   80000   80000   80000   80000   80000   80000
 		  80000   80000   80000   80000   80000   80000   80000   80000
 		  80000   80000   80000   80000   80000   80000   80000   80000
-		  80000>,
+		  80000   80000   80000>,
 
 		 /* Speed bin 2 */
 		 <80000   80000   80000   80000   80000   80000   80000   80000
@@ -570,7 +570,8 @@
 		 691200000  748800000  825600000  902400000  979200000
 		1056000000 1132800000 1209600000 1286400000 1363200000
 		1440000000 1516800000 1593600000 1670400000 1747200000
-		1824000000 1900800000 1977600000 2054400000 2150400000>,
+		1824000000 1900800000 1977600000 2054400000 2150400000
+		2246400000 2342400000>,
 
 		/* Speed bin 2 */
 		<307200000  384000000  460800000  537600000  614400000
@@ -588,24 +589,24 @@
 
 	qcom,cpr-open-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-45000)       0    15000  (-20000)       0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
+		<(-45000)       0    15000  (-10000)   10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
 
 		/* Speed bin 1 */
-		<(-45000)       0    15000  (-20000)       0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
-		<      0        0        0        0        0 >,
+		<(-45000)       0    15000  (-10000)   10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
+		<      0        0        0    10000    10000 >,
 
 		/* Speed bin 2 */
 		<(-45000)       0    15000  (-20000)       0 >,
@@ -619,24 +620,24 @@
 
 	qcom,cpr-closed-loop-voltage-fuse-adjustment =
 		/* Speed bin 0 */
-		<(-55000) (-20000)   15000  (-15000) (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
+		<(-55000) (-20000)   15000   (-5000)      0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
 
 		/* Speed bin 1 */
-		<(-55000) (-20000)   15000  (-15000) (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
-		<      0  (-10000) (-15000)       0  (-10000)>,
+		<(-55000) (-20000)   15000   (-5000)      0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
+		<      0  (-10000) (-15000)   10000       0  >,
 
 		/* Speed bin 2 */
 		<(-55000) (-20000)   15000  (-15000) (-10000)>,
@@ -659,7 +660,7 @@
 		<(-15000) (-15000) (-15000) (-15000) (-15000) (-15000) (-15000)
 		 (-15000) (-15000) (-15000) (-17000) (-19000) (-21000) (-23000)
 		 (-25000) (-25000) (-26000) (-26000) (-27000) (-27000) (-28000)
-		 (-28000) (-29000) (-29000) (-30000)>,
+		 (-28000) (-29000) (-29000) (-30000) (-30000) (-30000)>,
 
 		/* Speed bin 2 */
 		<(-15000) (-15000) (-15000) (-15000) (-15000) (-15000) (-15000)
@@ -672,7 +673,7 @@
 		<0 0 0 0 (-50000) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
 
 		/* Speed bin 1 */
-		<0 0 0 0 (-50000) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
+		<0 0 0 0 (-50000) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>,
 
 		/* Speed bin 2 */
 		<0 0 0 0 (-50000) 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0>;
@@ -688,7 +689,7 @@
 		<(-15000) (-15000) (-15000) (-15000) (-15000) (-15000) (-15000)
 		 (-15000) (-15000) (-15000) (-17000) (-19000) (-21000) (-23000)
 		 (-25000) (-25000) (-26000) (-26000) (-27000) (-27000) (-28000)
-		 (-28000) (-29000) (-29000) (-30000)>,
+		 (-28000) (-29000) (-29000) (-30000) (-30000) (-30000)>,
 
 		/* Speed bin 1 */
 		<(-15000) (-15000) (-15000) (-15000) (-15000) (-15000) (-15000)
@@ -981,7 +982,8 @@
 		< 1363200000 15 >,
 		< 1440000000 16 >,
 		< 1516800000 17 >,
-		< 1593600000 18 >;
+		< 1593600000 18 >,
+		< 1996800000 19 >;
 	qcom,perfcl-speedbin0-v0 =
 		<          0  0 >,
 		<  307200000  1 >,
@@ -1009,8 +1011,8 @@
 		< 1977600000 23 >,
 		< 2054400000 24 >,
 		< 2150400000 25 >,
-		< 2246400000 26 >,
-		< 2342400000 27 >;
+		< 2246400000 25 >,
+		< 2342400000 25 >;
 	qcom,perfcl-speedbin1-v0 =
 		<          0  0 >,
 		<  307200000  1 >,
@@ -1061,7 +1063,12 @@
 		< 1670400000 19 >,
 		< 1747200000 20 >,
 		< 1824000000 21 >,
-		< 1900800000 22 >;
+		< 1900800000 22 >,
+ 		< 1977600000 23 >,
+  		< 2054400000 24 >,
+		< 2150400000 25 >,
+		< 2246400000 26 >,
+		< 2342400000 27 >;
 	qcom,cbf-speedbin0-v0 =
 		<	   0  0 >,
 		<  192000000  1 >,
@@ -1165,7 +1172,8 @@
 		<  401800000  5  5 >,
 		<  510000000  6  5 >,
 		<  560000000  7  7 >,
-		<  624000000  8  7 >;
+		<  624000000  8  7 >,
+		<  652800000  9  7 >;
 	qcom,gfxfreq-mx-speedbin1 =
 		<	   0  0 >,
 		<  133000000  4 >,
@@ -1174,7 +1182,8 @@
 		<  401800000  5 >,
 		<  510000000  5 >,
 		<  560000000  7 >,
-		<  624000000  7 >;
+		<  624000000  7 >,
+		<  652800000  7 >;
 	qcom,gfxfreq-speedbin2 =
 		<          0  0  0 >,
 		<  133000000  2  4 >,
@@ -1324,7 +1333,8 @@
 			< 1593600 1525 >;
 		cpu-to-dev-map-2 =
 			< 2054400 1525 >,
-			< 2150400 5195 >;
+			< 2150400 5195 >,
+			< 2265600 5195 >;
 	};
 };
 
@@ -1441,66 +1451,74 @@
 
 			qcom,speed-bin = <1>;
 
-			qcom,initial-pwrlevel = <5>;
-
+			qcom,initial-pwrlevel = <6>;
+			
 			qcom,gpu-pwrlevel@0 {
 				reg = <0>;
+				qcom,gpu-freq = <652800000>;
+				qcom,bus-freq = <12>;
+				qcom,bus-min = <12>;
+				qcom,bus-max = <12>;
+			};			
+
+			qcom,gpu-pwrlevel@1 {
+				reg = <1>;
 				qcom,gpu-freq = <624000000>;
 				qcom,bus-freq = <12>;
 				qcom,bus-min = <11>;
 				qcom,bus-max = <12>;
 			};
 
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
+			qcom,gpu-pwrlevel@2 {
+				reg = <2>;
 				qcom,gpu-freq = <560000000>;
 				qcom,bus-freq = <11>;
 				qcom,bus-min = <9>;
 				qcom,bus-max = <12>;
 			};
 
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
+			qcom,gpu-pwrlevel@3 {
+				reg = <3>;
 				qcom,gpu-freq = <510000000>;
 				qcom,bus-freq = <9>;
 				qcom,bus-min = <8>;
 				qcom,bus-max = <11>;
 			};
 
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
+			qcom,gpu-pwrlevel@4 {
+				reg = <4>;
 				qcom,gpu-freq = <401800000>;
 				qcom,bus-freq = <8>;
 				qcom,bus-min = <7>;
 				qcom,bus-max = <9>;
 			};
 
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
+			qcom,gpu-pwrlevel@5 {
+				reg = <5>;
 				qcom,gpu-freq = <315000000>;
 				qcom,bus-freq = <6>;
 				qcom,bus-min = <5>;
 				qcom,bus-max = <7>;
 			};
 
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
+			qcom,gpu-pwrlevel@6 {
+				reg = <6>;
 				qcom,gpu-freq = <214000000>;
 				qcom,bus-freq = <4>;
 				qcom,bus-min = <3>;
 				qcom,bus-max = <5>;
 			};
 
-			qcom,gpu-pwrlevel@6 {
-				reg = <6>;
+			qcom,gpu-pwrlevel@7 {
+				reg = <7>;
 				qcom,gpu-freq = <133000000>;
 				qcom,bus-freq = <3>;
 				qcom,bus-min = <2>;
 				qcom,bus-max = <4>;
 			};
 
-			qcom,gpu-pwrlevel@7 {
-				reg = <7>;
+			qcom,gpu-pwrlevel@8 {
+				reg = <8>;
 				qcom,gpu-freq = <27000000>;
 				qcom,bus-freq = <0>;
 				qcom,bus-min = <0>;
