--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -61,8 +61,9 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_PVS_LEVEL_INTERFACE=y
-CONFIG_ASYNC_FSYNC=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_ASYNC_FSYNC=y
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # IRQ subsystem
@@ -622,6 +623,7 @@ CONFIG_TCP_CONG_CDG=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
