--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -467,7 +467,7 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_CMDLINE=""
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_DMI=y
 
