--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Guyver-v1.0"
+CONFIG_LOCALVERSION="-Guyver-v1.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -68,6 +68,7 @@ CONFIG_PVS_LEVEL_INTERFACE=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_ASYNC_FSYNC=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_LAZYPLUG=y
 
 #
 # IRQ subsystem
@@ -437,13 +438,13 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
-# CONFIG_FRONTSWAP is not set
+CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 # CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
-# CONFIG_ZPOOL is not set
-# CONFIG_ZBUD is not set
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
 CONFIG_Z3FOLD=y
 CONFIG_ZSWAP=y
 CONFIG_ZSMALLOC=y
@@ -3797,7 +3798,7 @@ CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_BAM_DMUX is not set
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
