--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -69,6 +69,8 @@ CONFIG_QUICK_WAKEUP=y
 CONFIG_ASYNC_FSYNC=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_LAZYPLUG=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_FINGERPRINT_BOOST=y
 
 #
 # IRQ subsystem
