--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -113,7 +113,10 @@ CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_RCU_BOOST=y
-# CONFIG_RCU_NOCB_CPU is not set
+CONFIG_RCU_BOOST_PRIO=1
+CONFIG_RCU_BOOST_DELAY=500
+CONFIG_RCU_NOCB_CPU=y
+CONFIG_RCU_NOCB_CPU_ALL=y
 # CONFIG_BUILD_BIN2C is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=21
@@ -532,19 +535,19 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
-CONFIG_CPU_FREQ_GOV_CHILL=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_CULTIVATION=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_CHILL=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
 
