--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Guyver-v1.4"
+CONFIG_LOCALVERSION="-Guyver-v1.5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -116,6 +116,8 @@ CONFIG_RCU_BOOST=y
 CONFIG_RCU_BOOST_PRIO=1
 CONFIG_RCU_BOOST_DELAY=500
 CONFIG_RCU_NOCB_CPU=y
+# CONFIG_RCU_NOCB_CPU_NONE is not set
+# CONFIG_RCU_NOCB_CPU_ZERO is not set
 CONFIG_RCU_NOCB_CPU_ALL=y
 # CONFIG_BUILD_BIN2C is not set
 # CONFIG_IKCONFIG is not set
@@ -426,7 +428,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -3801,7 +3803,7 @@ CONFIG_TRACER_PKT=y
 CONFIG_MSM_SECURE_BUFFER=y
 # CONFIG_ICNSS is not set
 # CONFIG_MSM_BAM_DMUX is not set
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_MSM_POWER=y
 # CONFIG_MSM_SERVICE_LOCATOR is not set
 CONFIG_MSM_QBT1000=y
