--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -559,6 +559,11 @@ CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_CPU_FREQ_MSM=y
 CONFIG_LAZYPLUG=y
+
+#
+# Expermimental Security Enhancements
+#
+# CONFIG_KUSER_HELPERS_SELECTIVE_DISABLE is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 # CONFIG_DISABLE_NET_SKB_FRAG_CACHE is not set
