--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -41,7 +41,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Guyver-v1.5"
+CONFIG_LOCALVERSION="-Guyver-v1.6"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -326,6 +326,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_MSM8920 is not set
 # CONFIG_ARCH_MSM8940 is not set
 # CONFIG_ARCH_MSM8953 is not set
+# CONFIG_ARCH_SDM450 is not set
 # CONFIG_ARCH_MSM8937 is not set
 CONFIG_ARCH_MSM8996=y
 # CONFIG_ARCH_MSMCOBALT is not set
@@ -993,7 +994,6 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_OPENVSWITCH is not set
 # CONFIG_VSOCKETS is not set
-# CONFIG_NETLINK_MMAP is not set
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_NET_MPLS_GSO is not set
 # CONFIG_HSR is not set
@@ -1101,6 +1101,7 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+# CONFIG_FW_CACHE is not set
 CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
@@ -3959,7 +3960,6 @@ CONFIG_EFI_RUNTIME_WRAPPERS=y
 CONFIG_EFI_ARMSTUB=y
 CONFIG_MSM_TZ_LOG=y
 # CONFIG_BIF is not set
-# CONFIG_MOBICORE_DRIVER is not set
 
 #
 # Firmware Drivers
