--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -364,12 +364,12 @@ CONFIG_PCI_LABEL=y
 #
 # ARM errata workarounds via the alternatives framework
 #
-CONFIG_ARM64_ERRATUM_826319=y
-CONFIG_ARM64_ERRATUM_827319=y
-CONFIG_ARM64_ERRATUM_824069=y
-CONFIG_ARM64_ERRATUM_819472=y
-CONFIG_ARM64_ERRATUM_832075=y
-CONFIG_ARM64_ERRATUM_845719=y
+# CONFIG_ARM64_ERRATUM_826319 is not set
+# CONFIG_ARM64_ERRATUM_827319 is not set
+# CONFIG_ARM64_ERRATUM_824069 is not set
+# CONFIG_ARM64_ERRATUM_819472 is not set
+# CONFIG_ARM64_ERRATUM_832075 is not set
+# CONFIG_ARM64_ERRATUM_845719 is not set
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_ARM64_DCACHE_DISABLE is not set
@@ -1682,7 +1682,7 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS_SECURE_FW is not set
 CONFIG_BUS_AUTO_SUSPEND=y
 # CONFIG_CNSS_LOGGER is not set
-CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
+# CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
